--- a/.github/workflows/unit-tests-badge.yml
+++ b/.github/workflows/unit-tests-badge.yml
@@ -1,13 +1,14 @@
-name: Build
+name: Unit Tests Badge
 
 on:
-  push:
-    branches:
-      - 'develop'
+  release:
+    types: [created]
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
@@ -15,11 +16,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build
-        run: mvn clean package
+      - name: Run tests
+        run: mvn test --batch-mode
