--- a/.github/workflows/maven-central-publish.yml
+++ b/.github/workflows/maven-central-publish.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           settings-path: ${{ github.workspace }}
-          server-id: ossrh_repo
+          server-id: central
           server-username: OSSRH_USERNAME
           server-password: OSSRH_TOKEN
 
@@ -38,7 +38,7 @@ jobs:
         run: mvn test --batch-mode
 
       - name: Publish
-        run: mvn deploy -Prelease --no-transfer-progress --batch-mode -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} -s $GITHUB_WORKSPACE/settings.xml
+        run: mvn deploy -Prelease --no-transfer-progress --batch-mode -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
