--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,13 @@
         </plugins>
     </build>
 
+             <distributionManagement>
+        <repository>
+            <id>central</id>
+            <url>https://central.sonatype.com/</url>
+        </repository>
+    </distributionManagement>
+
     <profiles>
         <profile>
             <id>release</id>
